# -Hyprland-Alt_tab

./: Hyprtab.py  pyproject.toml  pysidedeploy.spec  readme.me  requirements.txt  setup.sh  tab.spec
Hyprtab.dist/: liblzma.so.5  libpyside6.abi3.so.6.8  libshiboken6.abi3.so.6.8
