[tool.poetry]
name = "alt-tab"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyqt5 = "^5.15.11"
psutil = "^6.1.0"
keyboard = "^0.13.5"
xdg = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
